<resources>
    <string name="app_name">holaMundo</string>
    <string name="titulo">Mi primer Aplicacion movil</string>
    <string name="tunombre">¿Cual es tu nombre?</string>
    <string name="pulsar">Pulsame</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar">Cerrar</string>
    <string name="miempresa">Servicios Informaticos</string>
    <string name="alumno">Paola Meave Valdez</string>
    <string name="matricula">22050575</string>
    <string name="materia">Desarrollo Móvil</string>
    <string name="desImaCot">Logo Toyota</string>
    <string name="cel">Celcius a Fahrenheit</string>
    <string name="far">Fanhrenheit a Celcius</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="btnCalcular">Calcular</string>
    <string name="res">Resultados</string>
    <string name="lblGrados">Grados</string>
    <string name="lblCantidad">Capturar La cantidad de Grados</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="resu">Resultado</string>
    <string-array name="array_conversiones">
        <item> Peso Mexicano - DOLAR AMERICAON </item>
        <item> Peso Mexicano - Dolar canadience </item>
        <item> Peso Mexicano - Euro </item>
        <item> Dolar americano - Pesos Mexicano </item>
        <item> Dolar canadience - Peso Mexicano </item>
        <item> Euro - Peso Mexicano </item>
    </string-array>
    <string name="dolara">19.75</string>
    <string name="dolarc">14.75</string>
    <string name="euro">22.02</string>
    <string name="domicilio">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlan Sinaloa</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="marca">Toyota</string>
    <string name="des">Descripcion del Automovil</string>
    <string name="precio">Valor del Automovil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegresar">Regresar</string>
</resources>

