  <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".holaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16sp"
        android:paddingBottom="16sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textColor="@color/colorTitulo"
            android:textSize="20sp"
            android:id="@+id/lblSaludar"
            android:gravity="center">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:hint="@string/tunombre"
            android:inputType="text"
            android:autofillHints="name"
            android:id="@+id/txtNombre">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulsar"
            android:id="@+id/btnSaludo">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:id="@+id/btnLimpiar">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:id="@+id/btnCerrar"
            android:textSize="20sp">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>