<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".convertidor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <!-- Label TextView for degrees -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/lblGrados"
            android:textSize="18sp"
            android:text="@string/lblGrados"
            android:layout_marginStart="10dp" />

        <!-- Input EditText for temperature -->
        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"
            android:hint="@string/lblCantidad"
            android:textColor="@color/colorTitulo"
            android:textAlignment="center"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!-- Vertical LinearLayout for RadioGroup and Result -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="15dp">

        <!-- RadioGroup for temperature unit selection -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdbCel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cel"
                android:textSize="20sp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/rbdFar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/far"
                android:textSize="20sp" />
        </RadioGroup>

        <!-- TextView for displaying result -->
        <TextView
            android:id="@+id/txtRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/res"
            android:textSize="25sp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <!-- Vertical LinearLayout for Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- Button for calculating -->
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnCalcular" />

        <!-- Button for clearing input -->
        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnLimpiar" />

        <!-- Button for closing activity -->
        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnCerrar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
