<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Hola!"
            android:textSize="30dp"
            android:textColor="@color/miColor"
            android:paddingBottom="10sp">

        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombre"
            android:hint="@string/nombre"
            android:inputType="text"
            android:paddingBottom="10sp">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSaludo"
            android:textColor="@color/miColor"
            android:textAlignment="center"
            android:textSize="15dp"
            android:paddingBottom="10sp">
        </TextView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnPulsar"
            android:text="@string/pulsar"
            android:paddingBottom="10sp">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLimpiar"
            android:text="@string/limpiar"
            android:paddingBottom="10sp">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCerrar"
            android:text="@string/cerrar"
            android:paddingBottom="10sp">
        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>