<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cotizacionActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        android:paddingLeft="15sp"
        android:paddingRight="15so">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorTitulo">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/ciudad"
            android:textSize="15sp"
            android:paddingBottom="20sp">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cotizacion"
            android:layout_gravity="center"
            android:paddingBottom="20sp">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/cliente"
            android:textSize="20sp">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:textAlignment="center"
            android:id="@+id/txtCliente"
            android:hint="Escribe el Nombre del cliente">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEntrar"
            android:text="Ingresar">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegresar"
            android:text="Regresar">
        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>